--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.2.0
   flutter_screenutil: ^5.3.1
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.9
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
