--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.9
   provider: ^6.0.2
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
